--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
     <h1>Hi, I’m Karl 👋</h1>
     <p>Welcome to my portfolio website hosted on GitHub Pages!</p>
   </header>
+
   <section>
     <h2>About Me</h2>
-    <p>I’m Karl, an aspiring developer and creative writer. This is my personal portfolio.</p>
+    <p>This is where you can write about yourself, your skills, and your interests.</p>
   </section>
+
   <footer>
-    <p>© 2025 Karl</p>
+    <p>© 2025 Karl. All rights reserved.</p>
   </footer>
 </body>
 </html>
