--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <section>
     <h2>About Me</h2>
-    <p>This is where you can write about yourself, your skills, and your interests.</p>
+    <p>I am a third-year college student, an aspiring professional writer, and an artist.</p>
   </section>
 
   <footer>
