--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     section { padding: 2rem; }
     footer { background: #eee; padding: 1rem; text-align: center; }
   </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
