--- a/index.html
+++ b/index.html
@@ -22,3 +22,12 @@
   </footer>
 </body>
 </html>
+
+<section>
+  <h2>Projects</h2>
+  <ul>
+    <li>Short Story Collection – <a href="#">Read here</a></li>
+    <li>Digital Art Portfolio – <a href="#">View gallery</a></li>
+    <li>Blog Posts – <a href="#">Visit blog</a></li>
+  </ul>
+</section>
