--- a/index.html
+++ b/index.html
@@ -5,29 +5,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Karl's Portfolio</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+
   <header>
     <h1>Hi, I’m Karl 👋</h1>
-    <p> Welcome to my portfolio website </p>
+    <p>Welcome to my portfolio website</p>
   </header>
 
-  <section>
+  <section class="about">
     <h2>About Me</h2>
-    <p> I am a third-year college student, an aspiring professional writer, and an artist. </p>
+    <p>I am a third-year college student, an aspiring professional writer, and an artist.</p>
   </section>
 
-  <section>
-  <h2>Projects</h2>
-  <ul>
-    <li>Short Story Collection – <a href="#">Read here</a></li>
-    <li>Digital Art Portfolio – <a href="#">View gallery</a></li>
-    <li>Blog Posts – <a href="#">Visit blog</a></li>
-  </ul>
-</section>
+  <section class="projects">
+    <h2>Projects</h2>
+    <div class="project-card">
+      <h3>Short Story Collection</h3>
+      <p>A collection of my original short stories.</p>
+      <a href="#">Read here</a>
+    </div>
+    <div class="project-card">
+      <h3>Digital Art Portfolio</h3>
+      <p>My digital illustrations and designs.</p>
+      <a href="#">View gallery</a>
+    </div>
+    <div class="project-card">
+      <h3>Blog Posts</h3>
+      <p>Thoughts and essays on writing and art.</p>
+      <a href="#">Visit blog</a>
+    </div>
+  </section>
+
+  <section class="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">yourprofile</a></p>
+    <p>Instagram: <a href="https://instagram.com/yourprofile">yourprofile</a></p>
+  </section>
 
   <footer>
     <p>© 2025 Karl. All rights reserved.</p>
   </footer>
+
 </body>
 </html>
