--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 <body>
 
   <header>
+  <video autoplay muted loop id="banner-video">
+    <source src="banner.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+  <div class="header-content">
     <h1>Hi, I’m Karl 👋</h1>
     <p>Welcome to my portfolio website</p>
-  </header>
+  </div>
+</header>
 
   <section class="about">
     <h2>About Me</h2>
