--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
 </header>
 
   <section class="about">
+  <div class="container">
     <h2>About Me</h2>
     <p>I am a third-year college student, an aspiring professional writer, and an artist.</p>
-  </section>
+  </div>
+</section>
 
-  <section class="projects">
+<section class="projects">
+  <div class="container">
     <h2>Projects</h2>
     <div class="project-card">
       <h3>Short Story Collection</h3>
@@ -42,14 +45,17 @@
       <p>Thoughts and essays on writing and art.</p>
       <a href="#">Visit blog</a>
     </div>
-  </section>
+  </div>
+</section>
 
-  <section class="contact">
+<section class="contact">
+  <div class="container">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">yourprofile</a></p>
     <p>Instagram: <a href="https://instagram.com/yourprofile">yourprofile</a></p>
-  </section>
+  </div>
+</section>
 
   <footer>
     <p>© 2025 Karl. All rights reserved.</p>
