--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-  <header>
-  <video autoplay muted loop id="banner-video">
+<header>
+  <video autoplay muted loop playsinline id="banner-video">
     <source src="banner.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
