--- a/index.html
+++ b/index.html
@@ -2,12 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Karl's Portfolio</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600&display=swap" rel="stylesheet">
+  <title>Karl's Website</title>
+  <style>
+    header {
+      position: relative;
+      height: 400px;
+      overflow: hidden;
+      padding: 0 20px;
+      background-color: #3498db; /* or background-image */
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+  </style>
 </head>
 <body>
+  <header>
+    <h1>Welcome!</h1>
+  </header>
+</body>
+</html>
 
 header {
   position: relative;
