--- a/index.html
+++ b/index.html
@@ -1,79 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Karl's Website</title>
-  <style>
-    header {
-      position: relative;
-      height: 400px;
-      overflow: hidden;
-      padding: 0 20px;
-      background-color: #3498db; /* or background-image */
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-    }
-  </style>
-</head>
-<body>
-  <header>
-    <h1>Welcome!</h1>
-  </header>
-</body>
-</html>
-
-header {
-  position: relative;
-  height: 400px;
-  overflow: hidden;
-  padding: 0 20px;
-  background-image: url('banner.jpg'); /* your image file */
-  background-size: cover;             /* makes it cover the entire header */
-  background-position: center;        /* centers the image */
-  background-repeat: no-repeat;       /* prevents tiling */
-}
+</header>
 
   <section class="about">
   <div class="container">
     <h2>About Me</h2>
     <p>I am a third-year college student, an aspiring professional writer, and an artist.</p>
+  </section>
   </div>
 </section>
 
+  <section class="projects">
 <section class="projects">
   <div class="container">
     <h2>Projects</h2>
     <div class="project-card">
       <h3>Short Story Collection</h3>
-      <p>A collection of my original short stories.</p>
-      <a href="#">Read here</a>
-    </div>
-    <div class="project-card">
-      <h3>Digital Art Portfolio</h3>
-      <p>My digital illustrations and designs.</p>
-      <a href="#">View gallery</a>
-    </div>
-    <div class="project-card">
-      <h3>Blog Posts</h3>
+@@ -42,14 +45,17 @@ <h3>Blog Posts</h3>
       <p>Thoughts and essays on writing and art.</p>
       <a href="#">Visit blog</a>
     </div>
+  </section>
   </div>
 </section>
 
+  <section class="contact">
 <section class="contact">
   <div class="container">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">yourprofile</a></p>
     <p>Instagram: <a href="https://instagram.com/yourprofile">yourprofile</a></p>
+  </section>
   </div>
 </section>
 
   <footer>
     <p>© 2025 Karl. All rights reserved.</p>
-  </footer>
-
-</body>
-</html>
