--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<header>
+  <video autoplay muted loop playsinline id="banner-video">
+    <source src="banner.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+  <div class="header-content">
+    <h1>Hi, I’m Karl 👋</h1>
+    <p>Welcome to my portfolio website</p>
+  </div>
 </header>
 
   <section class="about">
