--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 <body>
 
   <header>
-  <div class="banner-text">
-    <h1>Hi, I'm Karl</h1>
-    <h2>Welcome to my portfolio website</h2>
-  </div>
-</header>
-
+    <video autoplay muted loop playsinline id="banner-video">
+      <source src="banner.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <div class="header-content">
+      <h1>Hi, I’m Karl 👋</h1>
+      <p>Welcome to my portfolio website</p>
+    </div>
+  </header>
+  
   <section class="about container">
     <h2>About Me</h2>
     <p>I am a third-year college student, an aspiring professional writer, and an artist.</p>
