--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   </div>
 </header>
   
-<section id="about">
+<section class="about">
+  <div class="container">
   <h2>About Me</h2>
   <p>
     I am a third-year college student majoring in English Language Studies and I’ve always had a big love for the arts, whether it’s writing, drawing (digital or traditional), or even editing photos and videos. I see myself pursuing a career in arts or English but I’m also excited to explore different fields and discover where else my skills can take me.
