--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
   
 <section class="about">
   <div class="container">
-  <h2>About Me</h2>
-  <p>
-    I am a third-year college student majoring in English Language Studies and I’ve always had a big love for the arts, whether it’s writing, drawing (digital or traditional), or even editing photos and videos. I see myself pursuing a career in arts or English but I’m also excited to explore different fields and discover where else my skills can take me.
-  </p>
-  <p>
-    I also have a huge interest in writing, brainstorming, analyzing, and connecting with people. I’d like to think I’m easy to work with and someone you can rely on, I’ve been a student leader since my elementary days, leading and serving others has always been one of my passions and it shaped me into the person I am today.
-  </p>
-  <p>
-    If you’d like to know more about what I’ve done so far, you can check out my full 
-    <a href="#cv" class="cv-link">Curriculum Vitae</a>.
-  </p>
+    <h2>About Me</h2>
+    <p>
+      I am a third-year college student majoring in English Language Studies and I’ve always had a big love for the arts, whether it’s writing, drawing (digital or traditional), or even editing photos and videos. I see myself pursuing a career in arts or English but I’m also excited to explore different fields and discover where else my skills can take me.
+    </p>
+    <p>
+      I also have a huge interest in writing, brainstorming, analyzing, and connecting with people. I’d like to think I’m easy to work with and someone you can rely on, I’ve been a student leader since my elementary days, leading and serving others has always been one of my passions and it shaped me into the person I am today.
+    </p>
+    <p>
+      If you’d like to know more about what I’ve done so far, you can check out my full 
+      <a href="#cv" class="cv-link">Curriculum Vitae</a>.
+    </p>
+  </div>
 </section>
 
   <section class="projects container">
