--- a/index.html
+++ b/index.html
@@ -11,10 +11,30 @@
 
   <header>
   <div class="banner-text">
+    <nav class="top-nav">
+  <a href="#about">About Me</a>
+  <a href="#projects">Projects/Works</a>
+  <a href="#experience">Experience</a>
+</nav>
     <h1>Hi, I'm Karl</h1>
     <h2>Welcome to my portfolio website</h2>
   </div>
 </header>
+
+  <section id="about">
+  <h2>About Me</h2>
+  <p>...your about me text...</p>
+</section>
+
+<section id="projects">
+  <h2>Projects/Works</h2>
+  <p>...your projects will go here...</p>
+</section>
+
+<section id="experience">
+  <h2>Experience</h2>
+  <p>...your experiences will go here...</p>
+</section>
   
 <section class="about">
   <div class="container">
