--- a/index.html
+++ b/index.html
@@ -10,49 +10,34 @@
 <body>
 
   <header>
-  <div class="banner-text">
     <nav class="top-nav">
-  <a href="#about">About Me</a>
-  <a href="#projects">Projects/Works</a>
-  <a href="#experience">Experience</a>
-</nav>
-    <h1>Hi, I'm Karl</h1>
-    <h2>Welcome to my portfolio website</h2>
-  </div>
-</header>
+      <a href="#about">About Me</a>
+      <a href="#projects">Projects/Works</a>
+      <a href="#experience">Experience</a>
+    </nav>
+    <div class="banner-text">
+      <h1>Hi, I'm Karl</h1>
+      <h2>Welcome to my portfolio website</h2>
+    </div>
+  </header>
 
-  <section id="about">
-  <h2>About Me</h2>
-  <p>...your about me text...</p>
-</section>
+  <section id="about" class="about">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>
+        I am a third-year college student majoring in English Language Studies and I’ve always had a big love for the arts, whether it’s writing, drawing (digital or traditional), or even editing photos and videos. I see myself pursuing a career in arts or English but I’m also excited to explore different fields and discover where else my skills can take me.
+      </p>
+      <p>
+        I also have a huge interest in writing, brainstorming, analyzing, and connecting with people. I’d like to think I’m easy to work with and someone you can rely on, I’ve been a student leader since my elementary days, leading and serving others has always been one of my passions and it shaped me into the person I am today.
+      </p>
+      <p>
+        If you’d like to know more about what I’ve done so far, you can check out my full 
+        <a href="#cv" class="cv-link">Curriculum Vitae</a>.
+      </p>
+    </div>
+  </section>
 
-<section id="projects">
-  <h2>Projects/Works</h2>
-  <p>...your projects will go here...</p>
-</section>
-
-<section id="experience">
-  <h2>Experience</h2>
-  <p>...your experiences will go here...</p>
-</section>
-  
-<section class="about">
-  <div class="container">
-    <h2>About Me</h2>
-    <p>
-      I am a third-year college student majoring in English Language Studies and I’ve always had a big love for the arts, whether it’s writing, drawing (digital or traditional), or even editing photos and videos. I see myself pursuing a career in arts or English but I’m also excited to explore different fields and discover where else my skills can take me.
-    </p>
-    <p>
-      I also have a huge interest in writing, brainstorming, analyzing, and connecting with people. I’d like to think I’m easy to work with and someone you can rely on, I’ve been a student leader since my elementary days, leading and serving others has always been one of my passions and it shaped me into the person I am today.
-    </p>
-    <p>
-      If you’d like to know more about what I’ve done so far, you can check out my full 
-      <a href="#cv" class="cv-link">Curriculum Vitae</a>.
-    </p>
-  </div>
-</section>
-
-  <section class="projects container">
+  <section id="projects" class="projects container">
     <h2>Projects</h2>
     <div class="projects-grid">
       <div class="project-card">
@@ -71,6 +56,11 @@
         <a href="#">Visit blog</a>
       </div>
     </div>
+  </section>
+
+  <section id="experience" class="container">
+    <h2>Experience</h2>
+    <p>Coming soon...</p>
   </section>
 
   <section class="contact container">
