--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <div class="container">
       <h2>About Me</h2>
       <p>
-        I am a third-year college student majoring in English Language Studies and I’ve always had a big love for the arts, whether it’s writing, drawing (digital or traditional), or even editing photos and videos. I see myself pursuing a career in arts or English but I’m also excited to explore different fields and discover where else my skills can take me.
+        I am a third-year college student majoring in English Language Studies. Ever since grade school, I’ve had a deep passion for the arts, whether it’s writing, drawing (digital or traditional), or editing photos and videos. Even though these are my creative pursuits, I am also eager to explore new horizons in other fields.
       </p>
       <p>
-        I also have a huge interest in writing, brainstorming, analyzing, and connecting with people. I’d like to think I’m easy to work with and someone you can rely on, I’ve been a student leader since my elementary days, leading and serving others has always been one of my passions and it shaped me into the person I am today.
+        My strengths include brainstorming, analyzing, and collaborating with a team. I have consistently shown my leadership skills since my elementary years, and alongside these skills, I remain committed to my academics. In senior high school, I graduated with high honors, and in college, I have been a consistent President’s Lister where I maintained a GWA of 1.11 in my sophomore year.
       </p>
       <p>
-        If you’d like to know more about what I’ve done so far, you can check out my full 
+        These are just a glimpse of my skills and experiences. If you’d like to know more about what I’ve done so far, you can check out my full 
         <a href="#cv" class="cv-link">Curriculum Vitae</a>.
       </p>
     </div>
