--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 
+  <section class="banner">
+  <h1>Welcome to My Portfolio</h1>
+  <p>I'm Karl, an English Language Studies student and artist.</p>
+</section>
+
   <header>
     <nav class="top-nav">
       <a href="#about">About Me</a>
