--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
   <p>I'm Karl, an English Language Studies student and artist.</p>
 </section>
 
-  <header>
-    <nav class="top-nav">
-      <a href="#about">About Me</a>
-      <a href="#projects">Projects/Works</a>
-      <a href="#experience">Experience</a>
-    </nav>
-    <div class="banner-text">
-      <h1>Hi, I'm Karl</h1>
-      <h2>Welcome to my portfolio website</h2>
-    </div>
-  </header>
+  <header class="banner">
+  <nav class="top-nav">
+    <a href="#about">About Me</a>
+    <a href="#projects">Projects/Works</a>
+    <a href="#experience">Experience</a>
+  </nav>
+  <div class="banner-text">
+    <h1>Hi, I'm Karl</h1>
+    <h2>Welcome to my portfolio website</h2>
+  </div>
+</header>
 
   <section id="about" class="about">
     <div class="container">
