--- a/index.html
+++ b/index.html
@@ -9,23 +9,20 @@
 </head>
 <body>
 
-  <section class="banner">
-  <h1>Welcome to My Portfolio</h1>
-  <p>I'm Karl, an English Language Studies student and artist.</p>
-</section>
-
+  <!-- Banner / Header with background image -->
   <header class="banner">
-  <nav class="top-nav">
-    <a href="#about">About Me</a>
-    <a href="#projects">Projects/Works</a>
-    <a href="#experience">Experience</a>
-  </nav>
-  <div class="banner-text">
-    <h1>Hi, I'm Karl</h1>
-    <h2>Welcome to my portfolio website</h2>
-  </div>
-</header>
+    <nav class="top-nav">
+      <a href="#about">About Me</a>
+      <a href="#projects">Projects/Works</a>
+      <a href="#experience">Experience</a>
+    </nav>
+    <div class="banner-text">
+      <h1>Hi, I'm Karl</h1>
+      <h2>Welcome to my portfolio website</h2>
+    </div>
+  </header>
 
+  <!-- About Section -->
   <section id="about" class="about">
     <div class="container">
       <h2>About Me</h2>
@@ -42,6 +39,7 @@
     </div>
   </section>
 
+  <!-- Projects -->
   <section id="projects" class="projects container">
     <h2>Projects</h2>
     <div class="projects-grid">
@@ -63,11 +61,13 @@
     </div>
   </section>
 
+  <!-- Experience -->
   <section id="experience" class="container">
     <h2>Experience</h2>
     <p>Coming soon...</p>
   </section>
 
+  <!-- Contact -->
   <section class="contact container">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
@@ -75,16 +75,17 @@
     <p>Instagram: <a href="https://instagram.com/yourprofile">yourprofile</a></p>
   </section>
 
+  <!-- Scroll effect for navbar -->
   <script>
-  window.addEventListener("scroll", function() {
-    const nav = document.querySelector(".top-nav");
-    if (window.scrollY > 50) { 
-      nav.classList.add("scrolled");
-    } else {
-      nav.classList.remove("scrolled");
-    }
-  });
-</script>
+    window.addEventListener("scroll", function() {
+      const nav = document.querySelector(".top-nav");
+      if (window.scrollY > 50) { 
+        nav.classList.add("scrolled");
+      } else {
+        nav.classList.remove("scrolled");
+      }
+    });
+  </script>
 
   <footer>
     <p>© 2025 Karl. All rights reserved.</p>
