--- a/index.html
+++ b/index.html
@@ -3,79 +3,102 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Karl's Portfolio</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600&display=swap" rel="stylesheet">
+  <title>Portfolio</title>
+  <style>
+    /* Reset & smooth scroll */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    html {
+      scroll-behavior: smooth;
+    }
+
+    body {
+      font-family: Helvetica, sans-serif;
+    }
+
+    /* Navbar */
+    .top-nav {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      padding: 1rem 0;
+      transition: all 0.3s ease;
+      z-index: 1000;
+    }
+
+    .top-nav a {
+      color: white;
+      text-decoration: none;
+      font-size: 1.1rem;
+      transition: color 0.3s ease;
+    }
+
+    /* When scrolled */
+    .top-nav.scrolled {
+      background-color: white;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+
+    .top-nav.scrolled a {
+      color: black;
+    }
+
+    /* Banner */
+    .banner {
+      height: 100vh;
+      background: url("your-banner.jpg") center/cover no-repeat;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      font-size: 2rem;
+    }
+
+    /* About section */
+    .about {
+      padding: 4rem 2rem;
+      background: #f5f5f5;
+    }
+  </style>
 </head>
 <body>
 
-  <!-- Banner / Header with background image -->
-  <header class="banner">
-    <nav class="top-nav">
-      <a href="#about">About Me</a>
-      <a href="#projects">Projects/Works</a>
-      <a href="#experience">Experience</a>
-    </nav>
-    <div class="banner-text">
-      <h1>Hi, I'm Karl</h1>
-      <h2>Welcome to my portfolio website</h2>
-    </div>
-  </header>
+  <!-- Navbar -->
+  <nav class="top-nav">
+    <a href="#about">About</a>
+    <a href="#projects">Projects</a>
+    <a href="#contact">Contact</a>
+  </nav>
 
-  <!-- About Section -->
+  <!-- Banner -->
+  <section class="banner">
+    <h1>Welcome to My Portfolio</h1>
+  </section>
+
+  <!-- About -->
   <section id="about" class="about">
-    <div class="container">
-      <h2>About Me</h2>
-      <p>
-        I am a third-year college student majoring in English Language Studies. Ever since grade school, I’ve had a deep passion for the arts, whether it’s writing, drawing (digital or traditional), or editing photos and videos. Even though these are my creative pursuits, I am also eager to explore new horizons in other fields.
-      </p>
-      <p>
-        My strengths include brainstorming, analyzing, and collaborating with a team. I have consistently shown my leadership skills since my elementary years, and alongside these skills, I remain committed to my academics. In senior high school, I graduated with high honors, and in college, I have been a consistent President’s Lister where I maintained a GWA of 1.11 in my sophomore year.
-      </p>
-      <p>
-        These are just a glimpse of my skills and experiences. If you’d like to know more about what I’ve done so far, you can check out my full 
-        <a href="#cv" class="cv-link">Curriculum Vitae</a>.
-      </p>
-    </div>
+    <h2>About Me</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor, risus eget.</p>
   </section>
 
-  <!-- Projects -->
-  <section id="projects" class="projects container">
+  <section id="projects" class="about">
     <h2>Projects</h2>
-    <div class="projects-grid">
-      <div class="project-card">
-        <h3>Short Story Collection</h3>
-        <p>A collection of my original short stories.</p>
-        <a href="#">Read here</a>
-      </div>
-      <div class="project-card">
-        <h3>Digital Art Portfolio</h3>
-        <p>My digital illustrations and designs.</p>
-        <a href="#">View gallery</a>
-      </div>
-      <div class="project-card">
-        <h3>Blog Posts</h3>
-        <p>Thoughts and essays on writing and art.</p>
-        <a href="#">Visit blog</a>
-      </div>
-    </div>
+    <p>Some of my works go here...</p>
   </section>
 
-  <!-- Experience -->
-  <section id="experience" class="container">
-    <h2>Experience</h2>
-    <p>Coming soon...</p>
-  </section>
-
-  <!-- Contact -->
-  <section class="contact container">
+  <section id="contact" class="about">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">yourprofile</a></p>
-    <p>Instagram: <a href="https://instagram.com/yourprofile">yourprofile</a></p>
+    <p>Let’s connect!</p>
   </section>
 
-  <!-- Scroll effect for navbar -->
+  <!-- Script -->
   <script>
     window.addEventListener("scroll", function() {
       const nav = document.querySelector(".top-nav");
@@ -86,10 +109,6 @@
       }
     });
   </script>
-
-  <footer>
-    <p>© 2025 Karl. All rights reserved.</p>
-  </footer>
 
 </body>
 </html>
