--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 <body>
 
+  <!-- Navigation -->
+  <nav class="top-nav">
+    <a href="#about">About Me</a>
+    <a href="#projects">Projects/Works</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <!-- Banner / Header -->
   <header>
+    <!-- If you don’t have a video, delete this <video> block -->
     <video autoplay muted loop playsinline id="banner-video">
       <source src="banner.mp4" type="video/mp4">
       Your browser does not support the video tag.
@@ -20,12 +29,14 @@
     </div>
   </header>
 
-  <section class="about container">
+  <!-- About -->
+  <section id="about" class="about container">
     <h2>About Me</h2>
     <p>I am a third-year college student, an aspiring professional writer, and an artist.</p>
   </section>
 
-  <section class="projects container">
+  <!-- Projects -->
+  <section id="projects" class="projects container">
     <h2>Projects</h2>
     <div class="projects-grid">
       <div class="project-card">
@@ -46,16 +57,30 @@
     </div>
   </section>
 
-  <section class="contact container">
+  <!-- Contact -->
+  <section id="contact" class="contact container">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">yourprofile</a></p>
     <p>Instagram: <a href="https://instagram.com/yourprofile">yourprofile</a></p>
   </section>
 
+  <!-- Footer -->
   <footer>
     <p>© 2025 Karl. All rights reserved.</p>
   </footer>
+
+  <!-- Scroll effect for nav -->
+  <script>
+    window.addEventListener("scroll", function() {
+      const nav = document.querySelector(".top-nav");
+      if (window.scrollY > 50) {
+        nav.classList.add("scrolled");
+      } else {
+        nav.classList.remove("scrolled");
+      }
+    });
+  </script>
 
 </body>
 </html>
