--- a/index.html
+++ b/index.html
@@ -9,16 +9,7 @@
 </head>
 <body>
 
-  <!-- Navigation -->
-  <nav class="top-nav">
-    <a href="#about">About Me</a>
-    <a href="#projects">Projects/Works</a>
-    <a href="#contact">Contact</a>
-  </nav>
-
-  <!-- Banner / Header -->
   <header>
-    <!-- If you don’t have a video, delete this <video> block -->
     <video autoplay muted loop playsinline id="banner-video">
       <source src="banner.mp4" type="video/mp4">
       Your browser does not support the video tag.
@@ -29,14 +20,12 @@
     </div>
   </header>
 
-  <!-- About -->
-  <section id="about" class="about container">
+  <section class="about container">
     <h2>About Me</h2>
     <p>I am a third-year college student, an aspiring professional writer, and an artist.</p>
   </section>
 
-  <!-- Projects -->
-  <section id="projects" class="projects container">
+  <section class="projects container">
     <h2>Projects</h2>
     <div class="projects-grid">
       <div class="project-card">
@@ -57,30 +46,16 @@
     </div>
   </section>
 
-  <!-- Contact -->
-  <section id="contact" class="contact container">
+  <section class="contact container">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">yourprofile</a></p>
     <p>Instagram: <a href="https://instagram.com/yourprofile">yourprofile</a></p>
   </section>
 
-  <!-- Footer -->
   <footer>
     <p>© 2025 Karl. All rights reserved.</p>
   </footer>
-
-  <!-- Scroll effect for nav -->
-  <script>
-    window.addEventListener("scroll", function() {
-      const nav = document.querySelector(".top-nav");
-      if (window.scrollY > 50) {
-        nav.classList.add("scrolled");
-      } else {
-        nav.classList.remove("scrolled");
-      }
-    });
-  </script>
 
 </body>
 </html>
