--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
 
+  <nav class="top-nav">
+  <a href="#about">About Me</a>
+  <a href="#projects">Projects/Works</a>
+  <a href="#experience">Experience</a>
+</nav>
+
   <header>
   <div class="banner-text">
     <h1>Hi, I'm Karl</h1>
