--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
   <a href="#projects">Projects/Works</a>
   <a href="#experience">Experience</a>
 </nav>
+    <section id="about">
+  <h2>About Me</h2>
+  <p>...your about me text...</p>
+</section>
+
+<section id="projects">
+  <h2>Projects/Works</h2>
+  <p>...your projects will go here...</p>
+</section>
+
+<section id="experience">
+  <h2>Experience</h2>
+  <p>...your experiences will go here...</p>
+</section>
+
     <h1>Hi, I'm Karl</h1>
     <h2>Welcome to my portfolio website</h2>
   </div>
