--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
     <p>Instagram: <a href="https://instagram.com/yourprofile">yourprofile</a></p>
   </section>
 
+  <script>
+  window.addEventListener("scroll", function() {
+    const nav = document.querySelector(".top-nav");
+    if (window.scrollY > 50) { 
+      nav.classList.add("scrolled");
+    } else {
+      nav.classList.remove("scrolled");
+    }
+  });
+</script>
+
   <footer>
     <p>© 2025 Karl. All rights reserved.</p>
   </footer>
