--- a/index.html
+++ b/index.html
@@ -21,23 +21,23 @@
     </div>
   </header>
 
-  <section class="about">
-  <div class="container">
-    <h2>About Me</h2>
-    <p>
-      I am a third-year college student majoring in English Language Studies. Ever since grade school, I’ve had a deep passion for the arts, whether it’s writing, drawing (digital or traditional), or editing photos and videos. Even though these are my creative pursuits, I am also eager to explore new horizons in other fields.
-    </p>
-    <p>
-      My strengths include brainstorming, analyzing, and collaborating with a team. I have consistently shown my leadership skills since my elementary years, and alongside these skills, I remain committed to my academics. In senior high school, I graduated with high honors, and in college, I have been a consistent President’s Lister where I maintained a GWA of 1.11 in my sophomore year.
-    </p>
-    <p>
-      These are just a glimpse of my skills and experiences. If you’d like to know more about what I’ve done so far, you can check out my full 
-      <a href="#cv" class="cv-link">Curriculum Vitae</a>.
-    </p>
-  </div>
-</section>
+  <section id="about" class="about">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>
+        I am a third-year college student majoring in English Language Studies. Ever since grade school, I’ve had a deep passion for the arts, whether it’s writing, drawing (digital or traditional), or editing photos and videos. Even though these are my creative pursuits, I am also eager to explore new horizons in other fields.
+      </p>
+      <p>
+        My strengths include brainstorming, analyzing, and collaborating with a team. I have consistently shown my leadership skills since my elementary years, and alongside these skills, I remain committed to my academics. In senior high school, I graduated with high honors, and in college, I have been a consistent President’s Lister where I maintained a GWA of 1.11 in my sophomore year.
+      </p>
+      <p>
+        These are just a glimpse of my skills and experiences. If you’d like to know more about what I’ve done so far, you can check out my full 
+        <a href="#cv" class="cv-link">Curriculum Vitae</a>.
+      </p>
+    </div>
+  </section>
 
-  <section class="projects container">
+  <section id="projects" class="projects container">
     <h2>Projects</h2>
     <div class="projects-grid">
       <div class="project-card">
@@ -56,6 +56,11 @@
         <a href="#">Visit blog</a>
       </div>
     </div>
+  </section>
+
+  <section id="experience" class="container">
+    <h2>Experience</h2>
+    <p>Coming soon...</p>
   </section>
 
   <section class="contact container">
