--- a/index.html
+++ b/index.html
@@ -7,57 +7,61 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Header / Banner -->
-  <header class="banner">
-    <div class="banner-content">
+
+  <!-- Navbar -->
+  <nav id="navbar">
+    <ul>
+      <li><a href="#hero">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#experience">Experience</a></li>
+    </ul>
+  </nav>
+
+  <!-- Hero Banner -->
+  <header class="hero" id="hero">
+    <div class="hero-content">
       <h1>Welcome to My Portfolio</h1>
-      <p>Discover my work, experiences, and more!</p>
+      <p>Coming soon on the experience...</p>
     </div>
   </header>
 
-  <!-- Navigation -->
-  <nav class="top-nav">
-    <a href="#about">About Me</a>
-    <a href="#projects">Projects/Works</a>
-    <a href="#experience">Experience</a>
-  </nav>
-
   <!-- About Section -->
-  <section id="about" class="about container">
-    <h2>About Me</h2>
-    <p>
-        I am a third-year college student majoring in English Language Studies. Ever since grade school, I’ve had a deep passion for the arts, whether it’s writing, drawing (digital or traditional), or editing photos and videos. Even though these are my creative pursuits, I am also eager to explore new horizons in other fields.
-      </p>
-      <p>
-        My strengths include brainstorming, analyzing, and collaborating with a team. I have consistently shown my leadership skills since my elementary years, and alongside these skills, I remain committed to my academics. In senior high school, I graduated with high honors, and in college, I have been a consistent President’s Lister where I maintained a GWA of 1.11 in my sophomore year.
-      </p>
-      <p>
-        These are just a glimpse of my skills and experiences. If you’d like to know more about what I’ve done so far, you can check out my full 
-        <a href="#cv" class="cv-link">Curriculum Vitae</a>.
-      </p>
-  </section>
-
-  <!-- Projects Section -->
-  <section id="projects" class="projects container">
-    <h2>Projects/Works</h2>
-    <p>Here are some of my projects. Coming soon!</p>
+  <section id="about" class="about">
+    <div class="about-container">
+      <img src="images/profile.jpg" alt="My Photo">
+      <div class="about-text">
+        <h2>About Me</h2>
+        <p>
+          Hi! I'm [Your Name], a passionate learner and creator.
+          This section is where you can tell visitors more about yourself,
+          your interests, and what you do.
+        </p>
+      </div>
+    </div>
   </section>
 
   <!-- Experience Section -->
-  <section id="experience" class="experience container">
+  <section id="experience" class="experience">
     <h2>Experience</h2>
-    <p>Coming soon...</p>
-  </section>
-
-  <!-- Contact Section -->
-  <section id="contact" class="contact container">
-    <h2>Contact</h2>
-    <p>You can reach me at: your.email@example.com</p>
+    <p>✨ Coming Soon ✨</p>
   </section>
 
   <!-- Footer -->
   <footer>
     <p>&copy; 2025 My Portfolio. All rights reserved.</p>
   </footer>
+
+  <script>
+    // Change navbar style when scrolling
+    window.addEventListener("scroll", function() {
+      const navbar = document.getElementById("navbar");
+      if (window.scrollY > 50) {
+        navbar.classList.add("scrolled");
+      } else {
+        navbar.classList.remove("scrolled");
+      }
+    });
+  </script>
+
 </body>
 </html>
