--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Karl's Portfolio</title>
   <link rel="stylesheet" href="style.css">
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600&family=Komrile+Condensed&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -81,7 +79,7 @@
       nav.classList.remove("scrolled");
     }
   });
-  </script>
+</script>
 
   <footer>
     <p>© 2025 Karl. All rights reserved.</p>
