--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
   <header>
     <nav class="top-nav">
-      <a href="#about">About Me</a>
+      <a href="#top">Home</a>
       <a href="#projects">Projects/Works</a>
-      <a href="#experience">Experience</a>
+      <a href="#contact">Contacts</a>
     </nav>
-    <div class="banner-text">
+    <div id="top" class="banner-text">
       <h1>Hi, I'm Karl</h1>
       <h2>Welcome to my portfolio website</h2>
     </div>
@@ -68,7 +68,7 @@
     <p>Coming soon...</p>
   </section>
 
-  <section class="contact container">
+  <section id="contact" class="contact container">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">yourprofile</a></p>
