--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-  <header>
+  <header id="top">
     <nav class="top-nav">
       <a href="#top">Home</a>
       <a href="#projects">Projects/Works</a>
       <a href="#contact">Contacts</a>
     </nav>
-    <div id="top" class="banner-text">
+    <div class="banner-text">
       <h1>Hi, I'm Karl</h1>
       <h2>Welcome to my portfolio website</h2>
     </div>
