--- a/index.html
+++ b/index.html
@@ -42,30 +42,25 @@
     </div>
   </section>
 
-  <section id="projects" class="projects container">
+  <section id="projects" class="projects container" style="font-family: 'Times New Roman', Times, serif;">
     <h2>Projects</h2>
     <div class="projects-grid">
       <div class="project-card">
-        <h3>Short Story Collection</h3>
-        <p>A collection of my original short stories.</p>
+        <h3>Writing</h3>
+        <p>My written works: essays and poems.</p>
         <a href="#">Read here</a>
       </div>
       <div class="project-card">
-        <h3>Digital Art Portfolio</h3>
-        <p>My digital illustrations and designs.</p>
+        <h3>Artwork</h3>
+        <p>Drawings, both digital and traditional.</p>
         <a href="#">View gallery</a>
       </div>
       <div class="project-card">
-        <h3>Blog Posts</h3>
-        <p>Thoughts and essays on writing and art.</p>
-        <a href="#">Visit blog</a>
+        <h3>Designs</h3>
+        <p>Publication materials and creative PowerPoints.</p>
+        <a href="#">Visit gallery</a>
       </div>
     </div>
-  </section>
-
-  <section id="experience" class="container">
-    <h2>Experience</h2>
-    <p>Coming soon...</p>
   </section>
 
   <section id="contact" class="contact container">
