--- a/index.html
+++ b/index.html
@@ -6,6 +6,30 @@
   <title>Karl's Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    /* Force equal height cards */
+    .projects-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+
+    .project-card {
+      border: 1px solid #444;
+      padding: 20px;
+      border-radius: 10px;
+      background: #1c1e1f;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between; /* pushes link to bottom */
+      min-height: 200px; /* ensures equal height */
+    }
+
+    /* Match section spacing */
+    .contact {
+      padding: 60px 20px; /* same as about section */
+    }
+  </style>
 </head>
 <body>
 
@@ -46,18 +70,24 @@
     <h2>Projects</h2>
     <div class="projects-grid">
       <div class="project-card">
-        <h3>Writing</h3>
-        <p>My written works: essays and poems.</p>
+        <div>
+          <h3>Writing</h3>
+          <p>My written works: essays and poems.</p>
+        </div>
         <a href="#">Read here</a>
       </div>
       <div class="project-card">
-        <h3>Artwork</h3>
-        <p>Drawings, both digital and traditional.</p>
+        <div>
+          <h3>Artwork</h3>
+          <p>Drawings, both digital and traditional.</p>
+        </div>
         <a href="#">View gallery</a>
       </div>
       <div class="project-card">
-        <h3>Designs</h3>
-        <p>Publication materials and creative PowerPoints.</p>
+        <div>
+          <h3>Designs</h3>
+          <p>Publication materials and creative PowerPoints.</p>
+        </div>
         <a href="#">Visit gallery</a>
       </div>
     </div>
