--- a/index.html
+++ b/index.html
@@ -45,27 +45,22 @@
   <section id="projects" class="projects container">
     <h2 style="font-family: 'Times New Roman', Times, serif;">Projects</h2>
     <div class="projects-grid" style="font-family: Arial, sans-serif;">
-      <div class="project-card">
-        <div>
-          <h3 style="font-weight: bold;">Writing</h3>
-          <p>My written works: essays and poems.</p>
-        </div>
-        <a href="#">Read here</a>
-      </div>
-      <div class="project-card">
-        <div>
-          <h3 style="font-weight: bold;">Artwork</h3>
-          <p>Drawings, both digital and traditional.</p>
-        </div>
-        <a href="#">View gallery</a>
-      </div>
-      <div class="project-card">
-        <div>
-          <h3 style="font-weight: bold;">Designs</h3>
-          <p>Publication materials and creative PowerPoints.</p>
-        </div>
-        <a href="#">Visit gallery</a>
-      </div>
+      
+      <a href="#" class="project-card">
+        <h3 style="font-weight: bold;">Writing</h3>
+        <p>My written works: essays and poems.</p>
+      </a>
+
+      <a href="#" class="project-card">
+        <h3 style="font-weight: bold;">Artwork</h3>
+        <p>Drawings, both digital and traditional.</p>
+      </a>
+
+      <a href="#" class="project-card">
+        <h3 style="font-weight: bold;">Designs</h3>
+        <p>Publication materials and creative PowerPoints.</p>
+      </a>
+
     </div>
   </section>
 
@@ -91,4 +86,5 @@
     <p>© 2025 Karl. All rights reserved.</p>
   </footer>
 
-</
+</body>
+</html>
