--- a/index.html
+++ b/index.html
@@ -43,32 +43,34 @@
   </section>
 
   <section id="projects" class="projects container">
-    <h2 style="font-family: 'Times New Roman', Times, serif;">Projects</h2>
-    <div class="projects-grid" style="font-family: Arial, sans-serif;">
+    <h2 class="projects-title">Projects</h2>
+    <div class="projects-grid">
       
       <a href="#" class="project-card">
-        <h3 style="font-weight: bold;">Writing</h3>
+        <h3>Writing</h3>
         <p>My written works: essays and poems.</p>
       </a>
 
       <a href="#" class="project-card">
-        <h3 style="font-weight: bold;">Artwork</h3>
+        <h3>Artwork</h3>
         <p>Drawings, both digital and traditional.</p>
       </a>
 
       <a href="#" class="project-card">
-        <h3 style="font-weight: bold;">Designs</h3>
+        <h3>Designs</h3>
         <p>Publication materials and creative PowerPoints.</p>
       </a>
 
     </div>
   </section>
 
-  <section id="contact" class="contact container" style="margin-top: 60px;">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">yourprofile</a></p>
-    <p>Instagram: <a href="https://instagram.com/yourprofile">yourprofile</a></p>
+  <section id="contact" class="contact container">
+    <h2 class="contact-title">Contact</h2>
+    <div class="contact-details">
+      <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+      <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile">yourprofile</a></p>
+      <p>Instagram: <a href="https://instagram.com/yourprofile">yourprofile</a></p>
+    </div>
   </section>
 
   <script>
