--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <p>My written works: essays and poems.</p>
       </a>
 
-      <a href="#" class="project-card">
+      <a href="artworks.html" class="project-card">
         <h3>Artwork</h3>
         <p>Drawings, both digital and traditional.</p>
       </a>
