--- a/artworks.html
+++ b/artworks.html
@@ -8,11 +8,13 @@
 </head>
 <body>
 
+  <!-- Banner -->
   <header class="gallery-header">
     <h1>Artworks</h1>
-    <p>This section contains my best works. You may click on any of them to see the details of it.</p>
+    <p>This is my gallery of artworks in digital and traditional media.</p>
   </header>
 
+  <!-- Gallery -->
   <main class="gallery-container">
     <div class="gallery-grid">
       <a href="images/art1.jpg" target="_blank">
@@ -31,6 +33,7 @@
     </div>
   </main>
 
+  <!-- Footer -->
   <footer>
     <p>© 2025 Karl. All rights reserved.</p>
   </footer>
