--- a/artworks.html
+++ b/artworks.html
@@ -17,8 +17,8 @@
   <!-- Gallery -->
   <main class="gallery-container">
     <div class="gallery-grid">
-      <a href="images/art1.jpg" target="_blank">
-        <img src="images/art1.jpg" alt="Artwork 1">
+      <a href="images/pearl.jpg" target="_blank">
+        <img src="images/pearl.jpg" alt="Artwork 1">
       </a>
       <a href="images/art2.jpg" target="_blank">
         <img src="images/art2.jpg" alt="Artwork 2">
