--- a/artworks.html
+++ b/artworks.html
@@ -18,18 +18,17 @@
   <main class="gallery-container">
     <div class="gallery-grid">
       <a href="images/pearl.jpg" target="_blank">
-        <img src="images/pearl.jpg" alt="Artwork 1">
+        <img src="images/pearl.jpg" alt="Digital painting: Pearl">
       </a>
       <a href="images/art2.jpg" target="_blank">
-        <img src="images/art2.jpg" alt="Artwork 2">
+        <img src="images/art2.jpg" alt="Traditional sketch in pencil">
       </a>
       <a href="images/art3.jpg" target="_blank">
-        <img src="images/art3.jpg" alt="Artwork 3">
+        <img src="images/art3.jpg" alt="Digital illustration">
       </a>
       <a href="images/art4.jpg" target="_blank">
-        <img src="images/art4.jpg" alt="Artwork 4">
+        <img src="images/art4.jpg" alt="Traditional watercolor piece">
       </a>
-      <!-- Add more artworks here -->
     </div>
   </main>
 
